Release v0.02
