# packages/schema/openapi.yaml
@@ -622,6 +622,16 @@ components:
           type: string
         slug:
           type: string
+        color:
+          type: string
+        logo:
+          type: string
+        website:
+          type: string
+        aliases:
+          type: array
+          items:
+            type: string
     DateInfo:
       type: object
       properties:
